# sqlite-job

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  tests.md
src/: example.py
src/sqlite_job/: __init__.py  connections.py  db.py  main.py  models.py  settings.py  worker.py
tests/: conftest.py  test_connections.py  test_db.py  test_integration.py  test_models.py  test_simple.py  test_worker.py
